[package]
name = "matrix-codegen"
description = "Generate QR Codes and Datamatrix codes from the command line"
authors = ["doncato <doncato@notarobot.cyou>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["cargo"], version = "3.2" }
datamatrix = "0.3"
qrcode-generator = "4.1"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
image = "0.24"
